// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Links  should render a DOI link 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <DoiCitationView
              doi="10.1016/j.pnsc.2012.12.004"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Open Access - Embargo applies"
          >
            Open Access - Embargo applies
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component Links  should render a PubMed Central link 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <PubmedCentralLink
              pubmedCentralId="PMC5179926"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Full text from PubMed Central"
          >
            Full text from PubMed Central
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component Links  should render empty div 1`] = `
<div
  className="links empty"
/>
`;

exports[`Component Links  should render list of links with OA icons 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="https://scholar.google.com/scholar?q=intitle:%22undefined%22"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Search Google Scholar for this open access article"
            >
              https://scholar.google.com/scholar?q=intitle:"undefined%22
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Search Google Scholar for this open access article"
          >
            Search Google Scholar for this open access article
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Click to open link in a new window"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component Links  should render list of links with OA icons due to no embargo days 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="https://scholar.google.com/scholar?q=intitle:%22undefined%22"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Search Google Scholar for this open access article"
            >
              https://scholar.google.com/scholar?q=intitle:"undefined%22
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Search Google Scholar for this open access article"
          >
            Search Google Scholar for this open access article
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Click to open link in a new window"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component Links  should render list of links with closed OA icons due to DOI OA status 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <DoiCitationView
              doi="10.1016/j.pnsc.2012.12.004"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="DOI"
          >
            DOI
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Click to open link in a new window"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="openAccessClosed noOaIcon"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component Links  should render list of links with locked OA icons due to embargo date in the future 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="https://scholar.google.com/scholar?q=intitle:%22undefined%22"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Search Google Scholar for this open access article"
            >
              https://scholar.google.com/scholar?q=intitle:"undefined%22
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Search Google Scholar for this open access article"
          >
            Search Google Scholar for this open access article
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Link to publication"
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Open access after 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessEmbargoed large"
                title="Link (no DOI) - Open access after 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="Another link to publication"
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Open access after 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessEmbargoed large"
                title="Link (no DOI) - Open access after 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Click to open link in a new window"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
            title="No description available"
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Open access after 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessEmbargoed large"
                title="Link (no DOI) - Open access after 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Links method tests  getAllLinks link creation function 1`] = `"[{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"pubmedCentralId\\":\\"PMC12345678\\"},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Full text from PubMed Central\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccess large\\",\\"title\\":\\"Open Access - Free to read\\"},\\"_owner\\":null,\\"_store\\":{}}},{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"doi\\":\\"10.1093/hmg/ddw177\\"},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Link (no DOI)\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"openAccessClosed noOaIcon\\"},\\"_owner\\":null,\\"_store\\":{}}},{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"href\\":\\"https://scholar.google.com/scholar?q=intitle:%22Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer%22\\",\\"title\\":\\"Search Google Scholar for this open access article\\",\\"children\\":\\"https://scholar.google.com/scholar?q=intitle:\\\\\\"Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer%22\\",\\"className\\":\\"externalLink\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\",\\"openInNewIcon\\":true},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Search Google Scholar for this open access article\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccess large\\",\\"title\\":\\"Open Access - Free to read\\"},\\"_owner\\":null,\\"_store\\":{}}},{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"href\\":\\"http://www.thisisatest.com\\",\\"title\\":\\"Link to publication\\",\\"children\\":\\"http://www.thisisatest.com\\",\\"className\\":\\"externalLink\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\",\\"openInNewIcon\\":true},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Link to publication\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"children\\":[{\\"type\\":\\"span\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"is-hidden-mobile is-hidden-tablet-only\\",\\"children\\":\\"Open access after 20th November 2043 \\"},\\"_owner\\":null,\\"_store\\":{}},{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccessEmbargoed large\\",\\"title\\":\\"Link (no DOI) - Open access after 20th November 2043\\"},\\"_owner\\":null,\\"_store\\":{}}]},\\"_owner\\":null,\\"_store\\":{}}},{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"href\\":\\"http://www.thisisanothertest.com\\",\\"title\\":\\"Click to open link in a new window\\",\\"children\\":\\"http://www.thisisanothertest.com\\",\\"className\\":\\"externalLink\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\",\\"openInNewIcon\\":true},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"No description available\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"children\\":[{\\"type\\":\\"span\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"is-hidden-mobile is-hidden-tablet-only\\",\\"children\\":\\"Open access after 20th November 2043 \\"},\\"_owner\\":null,\\"_store\\":{}},{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccessEmbargoed large\\",\\"title\\":\\"Link (no DOI) - Open access after 20th November 2043\\"},\\"_owner\\":null,\\"_store\\":{}}]},\\"_owner\\":null,\\"_store\\":{}}}]"`;

exports[`Links method tests  getDoiLink link creation function 1`] = `"{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"doi\\":\\"10.1093/hmg/ddw177\\"},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"DOI\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"openAccessClosed noOaIcon\\"},\\"_owner\\":null,\\"_store\\":{}}}"`;

exports[`Links method tests  getGoogleScholarLink link creation function 1`] = `"{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"href\\":\\"https://scholar.google.com/scholar?q=intitle:%22Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer%22\\",\\"title\\":\\"Search Google Scholar for this open access article\\",\\"children\\":\\"https://scholar.google.com/scholar?q=intitle:\\\\\\"Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer%22\\",\\"className\\":\\"externalLink\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\",\\"openInNewIcon\\":true},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Search Google Scholar for this open access article\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccess large\\",\\"title\\":\\"Open Access - Free to read\\"},\\"_owner\\":null,\\"_store\\":{}}}"`;

exports[`Links method tests  getPMCLink link creation function 1`] = `"{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"pubmedCentralId\\":\\"PMC12345\\"},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Full text from PubMed Central\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccess large\\",\\"title\\":\\"Open Access - PMC - Free to read\\"},\\"_owner\\":null,\\"_store\\":{}}}"`;

exports[`Links method tests  getPublicationLink link creation function as 1. open 2. embargoed, 3. closed 1`] = `"{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"href\\":\\"http://www.thisisatest.com\\",\\"title\\":\\"Link to publication\\",\\"children\\":\\"http://www.thisisatest.com\\",\\"className\\":\\"externalLink\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\",\\"openInNewIcon\\":true},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Link to publication\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccess large\\",\\"title\\":\\"Open Access - Free to read\\"},\\"_owner\\":null,\\"_store\\":{}}}"`;

exports[`Links method tests  getPublicationLink link creation function as 1. open 2. embargoed, 3. closed 2`] = `"{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"href\\":\\"http://www.thisisatest.com\\",\\"title\\":\\"Link to publication\\",\\"children\\":\\"http://www.thisisatest.com\\",\\"className\\":\\"externalLink\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\",\\"openInNewIcon\\":true},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Link to publication\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"children\\":[{\\"type\\":\\"span\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"is-hidden-mobile is-hidden-tablet-only\\",\\"children\\":\\"Open access after 4th February 2021 \\"},\\"_owner\\":null,\\"_store\\":{}},{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"fez-icon openAccessEmbargoed large\\",\\"title\\":\\"Link (no DOI) - Open access after 4th February 2021\\"},\\"_owner\\":null,\\"_store\\":{}}]},\\"_owner\\":null,\\"_store\\":{}}}"`;

exports[`Links method tests  getPublicationLink link creation function as 1. open 2. embargoed, 3. closed 3`] = `"{\\"link\\":{\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"href\\":\\"http://www.thisisatest.com\\",\\"title\\":\\"Link to publication\\",\\"children\\":\\"http://www.thisisatest.com\\",\\"className\\":\\"externalLink\\",\\"target\\":\\"_blank\\",\\"rel\\":\\"noopener noreferrer\\",\\"openInNewIcon\\":true},\\"_owner\\":null,\\"_store\\":{}},\\"description\\":\\"Link to publication\\",\\"icon\\":{\\"type\\":\\"div\\",\\"key\\":null,\\"ref\\":null,\\"props\\":{\\"className\\":\\"openAccessClosed noOaIcon\\"},\\"_owner\\":null,\\"_store\\":{}}}"`;

exports[`Links method tests  publicationLinkOpenAccessStatus function as 1.embargoed, 2.open, 3.open, 4.closed 1`] = `"{\\"openAccess\\":false,\\"recordOaStatus\\":453694,\\"embargoDate\\":\\"9th September 2032\\"}"`;

exports[`Links method tests  publicationLinkOpenAccessStatus function as 1.embargoed, 2.open, 3.open, 4.closed 2`] = `"{\\"openAccess\\":true,\\"recordOaStatus\\":453694,\\"embargoDate\\":null}"`;

exports[`Links method tests  publicationLinkOpenAccessStatus function as 1.embargoed, 2.open, 3.open, 4.closed 3`] = `"{\\"openAccess\\":true,\\"recordOaStatus\\":453694,\\"embargoDate\\":null}"`;

exports[`Links method tests  publicationLinkOpenAccessStatus function as 1.embargoed, 2.open, 3.open, 4.closed 4`] = `"{\\"openAccess\\":false,\\"recordOaStatus\\":453693,\\"embargoDate\\":null}"`;
